--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,11 +17,9 @@
 buildscript {
 
     dependencies {
-        classpath 'com.github.jcandksolutions.gradle:android-unit-test:2.0.2'
-        classpath 'io.fabric.tools:gradle:1.14.4'
-        classpath 'de.undercouch:gradle-download-task:1.2'
-        classpath 'com.github.triplet.gradle:play-publisher:1.0.4'
-        classpath 'com.dicedmelon.gradle:jacoco-android:0.1.1'
+        classpath 'io.fabric.tools:gradle:1.21.2'
+        classpath 'de.undercouch:gradle-download-task:3.0.0'
+        classpath 'com.github.triplet.gradle:play-publisher:1.1.4'
     }
 }
 
@@ -32,6 +30,7 @@ def versionPatch = 1
 
 apply plugin: 'com.android.application'
 apply plugin: 'io.fabric'
+apply from: '../android-jacoco.gradle'
 
 def gitSha = 'git rev-parse --short HEAD'.execute([], project.rootDir).text.trim()
 def buildTime = new Date().format("yyyy-MM-dd'T'HH:mm'Z'", TimeZone.getTimeZone("UTC"))
@@ -39,8 +38,8 @@ project.ext.set("gitSha", gitSha)
 
 android {
 
-    compileSdkVersion 21
-    buildToolsVersion "22"
+    compileSdkVersion 22
+    buildToolsVersion "22.0.1"
 
     signingConfigs {
         googlePlay {
@@ -51,8 +50,8 @@ android {
 
     defaultConfig {
         applicationId "de.poeschl.apps.tryandremove"
-        minSdkVersion 15
-        targetSdkVersion 22
+        minSdkVersion 22
+        targetSdkVersion 21
 
         versionCode versionMajor * 10000 + versionMinor * 1000 + versionPatch
         versionName "${versionMajor}.${versionMinor}.${versionPatch}"
@@ -100,30 +99,7 @@ android {
     }
 }
 
-apply plugin: 'android-unit-test'
-
-androidUnitTest {
-    testReleaseBuildType true
-    //Run tests for all the build types including non-debuggable (like the Release build type). Only works for Application projects, not Library projects.
-    downloadDependenciesSources false
-    //Download the sources.jar for the production dependencies. `true` by default.
-    downloadDependenciesJavadoc true
-    //Download the javadoc.jar for the production dependencies. `false` by default.
-    downloadTestDependenciesSources false
-    //Download the sources.jar for the test dependencies. `true` by default.
-    downloadTestDependenciesJavadoc true
-    //Download the javadoc.jar for the test dependencies. `false` by default.
-}
-
-apply plugin: 'jacoco-android'
-jacocoAndroidUnitTestReport {
-    excludes += ['**/*$ViewBinder*.*',
-                 '**/*_MembersInjector*.*',
-                 '**/*_Factory*.*']
-    print excludes
-}
-
-apply plugin: 'play'
+apply plugin: 'com.github.triplet.play'
 play {
     def properties = getExternalProperties()
     serviceAccountEmail = properties["serviceAccountMail"]
@@ -158,7 +134,7 @@ task checkstyle(type: Checkstyle) {
     configProperties configProps
 
     //If you are offline and the checkstyle stuff was downloaded once you can comment the next line out
-    it.dependsOn 'downloadCheckstyleConfig'
+//    it.dependsOn 'downloadCheckstyleConfig'
     classpath = files()
 }
 apply plugin: 'de.undercouch.download'
@@ -166,8 +142,8 @@ import de.undercouch.gradle.tasks.download.Download
 
 task downloadCheckstyleConfig(type: Download) {
     src([
-            'https://raw.githubusercontent.com/Poeschl/Android-Checkstyle/master/checkstyle.xml',
-            'https://raw.githubusercontent.com/Poeschl/Android-Checkstyle/master/suppressions.xml'
+            'http://raw.githubusercontent.com/Poeschl/Android-Checkstyle/master/checkstyle.xml',
+            'http://raw.githubusercontent.com/Poeschl/Android-Checkstyle/master/suppressions.xml'
     ])
     dest buildDir
     overwrite true
@@ -218,11 +194,11 @@ task setupSigning() {
  * Adds dynamically keys and secret stuff to the project
  */
 afterEvaluate { project ->
-//    project.tasks.findByName("generateReleasePlayResources")
     def generateReleasePlayResources = project.tasks.findByName("generateReleasePlayResources")
     if (generateReleasePlayResources != null) {
-        println "Play sources generation not available"
         generateReleasePlayResources.dependsOn setupSigning
+    } else {
+        println "Play sources generation not available"
     }
 }
 
@@ -261,7 +237,7 @@ def setupFabricApiFile(properties) {
 }
 
 dependencies {
-    compile 'com.android.support:recyclerview-v7:21.0.3'
+    compile 'com.android.support:recyclerview-v7:22.0.0'
     compile 'com.android.support:appcompat-v7:22.0.0'
     compile 'com.android.support:palette-v7:22.0.0'
     compile 'com.google.android.gms:play-services-ads:7.0.0'
@@ -284,7 +260,7 @@ dependencies {
     testCompile 'junit:junit:4.10'
     testCompile 'org.robolectric:robolectric:2.4'
 
-    androidTestCompile 'com.jayway.android.robotium:robotium-solo:5.3.1'
+    androidTestCompile 'com.jayway.android.robotium:robotium-solo:5.6.0'
     androidTestCompile 'org.hamcrest:hamcrest-core:1.3'
     androidTestCompile 'org.hamcrest:hamcrest-library:1.3'
 
